# wardnet

./: .dockerignore  .gitignore  .trivyignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  scorecard-analysis.yml
crates/waf-ids-core/: Cargo.toml
crates/waf-ids-core/src/: lib.rs
crates/waf-ids-core/tests/: fuzz_invariants.rs
deploy/: docker-compose.yml
deploy/kubernetes/: waf-ids-ai-soc.yaml
docs/: architecture.md  design-system.md  fuzzing.md
docs/analytics/: enterprise-value-scorecard.md  soc-kpis.md
docs/commercial/: 20b-krw-sale-readiness.md  buyer-due-diligence.md
docs/deployment/: production.md
docs/figma/: commercial-readiness-frame-brief.md  diagram-brief.md  enterprise-product-architecture.md
docs/goals/: 2026-07-02-initial-mvp-goal.md
docs/ponytail/: 2026-07-02-complexity-audit.md
docs/product-design/: admin-console-brief.md  commercial-console-brief.md  enterprise-operator-workflows.md
docs/runbooks/: operations.md
docs/security/: compliance-mapping.md  threat-model.md
docs/superpowers/plans/: 2026-07-02-commercial-sale-readiness.md  2026-07-02-enterprise-product-package.md  2026-07-02-feed-freshness-siem-evidence.md  2026-07-02-program-completion-baseline.md  2026-07-02-waf-ids-ai-soc-mvp.md  2026-07-03-audit-log-surface.md  2026-07-03-buyer-evidence-manifest.md
docs/superpowers/specs/: 2026-07-02-commercial-sale-readiness-design.md  2026-07-02-enterprise-product-package-design.md  2026-07-02-feed-freshness-siem-evidence-design.md  2026-07-02-program-completion-baseline-design.md  2026-07-02-waf-ids-ai-soc-design.md  2026-07-03-buyer-evidence-manifest-design.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_appdata_json/: minimal  truncated  with-route
fuzz/corpus/fuzz_dnsbl_zone/: basic  quote-injection  zone-breakout-newline-origin
fuzz/corpus/fuzz_parse_admin_tokens/: degenerate  pairs  spaced
fuzz/corpus/fuzz_score_request/: benign  cmdi  jndi  percent-encoded  sqli  ssrf  traversal  xss
fuzz/fuzz_targets/: fuzz_appdata_json.rs  fuzz_dnsbl_zone.rs  fuzz_parse_admin_tokens.rs  fuzz_score_request.rs
scripts/: smoke.sh
src/: lib.rs  main.rs
tests/: binary.rs  fuzz_invariants.rs
