[package]
name = "waf-ids-ai-soc"
version = "0.1.0"
edition = "2024"
description = "Rust-first WAF/IDS/AI SOC gateway MVP with DNSBL publishing surfaces"
license = "MIT"

[dependencies]
axum = "0.8"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
