[package]
name = "waf-ids-ai-soc"
version = "0.1.0"
edition = "2024"
description = "Rust-first WAF/IDS/AI SOC gateway with DNSBL and commercial readiness surfaces"
license = "MIT"

[workspace]
members = [".", "crates/waf-ids-core"]
resolver = "3"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
waf-ids-core = { path = "crates/waf-ids-core" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
